2025-10-24 - v0.1.0 - Initial Release