@@ -1,1 +1,2 @@
 2025-10-24 - v0.1.0 - Initial Release
+2025-10-30 - v0.1.1 - Sorting and docstrings added
